add more skeleton code for circle detection

--- a/project.ipynb
+++ b/project.ipynb
@@ -99,7 +99,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_coin\n",
+    "def find_coin():\n",
+    "    # find coin circle\n",
+    "    # blackout surrounding background\n",
+    "    x, y, r = circle\n",
+    "    coin_region = image.crop((x - r, y - r, x + r, y + r))\n",
+    "    return coin_region\n",
+    "    # \n",
     "    pass"
    ]
   },
