--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,16 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pattern_matching(image, pattern):\n",
     "    \n",
     "    difference = np.abs(np.array(image) - np.array(pattern))\n",
-    "    if np.mean(difference) < 45:  # should adjust\n",
+    "    if np.mean(difference) < 50:  # should adjust\n",
     "        return True\n",
     "    \"\"\"cosine = np.dot(image,pattern)/(np.linalg.norm(image)*np.linalg.norm(pattern))\n",
+    "    print (np.mean(cosine))\n",
     "    if np.mean(cosine)>0.6:\n",
     "        return True\"\"\"\n",
     "\n",
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +205,7 @@
        "'coin_pattern_100_2 = process(\"coin_template/100_2.png\")[0]\\ncoin_pattern_500 = process(\"coin_template/500.png\")[0]\\ncoin_pattern_500_2 = process(\"coin_template/500_2.png\")[0]'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -332,23 +333,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10won Coin detected!\n"
+      "100won Coin detected!\n",
+      "10won Coin detected!\n",
+      "10won Coin detected!\n",
+      "100won Coin detected!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[1, 0, 0, 0]"
+       "[2, 0, 2, 0]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,10 +362,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "문제: 원 인식 시, 한 원을 여러개의 원으로 인식함. 따라서, 의도한 것보다 더 많은 동전이 감지될 것이라 추측함."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
